<resources>
    <string name="app_name">Editora-CRUD</string>
    <string name="txt_title">Titulo:</string>
    <string name="txt_author">Autor</string>
    <string name="txt_publisher">Editora</string>
    <string name="btn_send">Enviar</string>
    <string name="txt_id">ID</string>
    <string name="btn_list">Ver Lista</string>
    <string name="Return">Voltar</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add">Adicionar</string>
</resources>
